Next Release
------------

- Fixed installation of content types, CSS and JavaScript using Generic Setup.
  [hvelarde]

- Fixed small issues and added some install/uninstall tests
  [hvelarde, saibatizoku]

- Plone 4 compatibility:  Import 'transaction_note' from new location
  ('Products.Archetypes.utils' rather than 'Products.Archetypes').
  [tseaver]

- Plone 4 compatibility:  Removed uses of long-deprecated 'zope.app.zapi'
  module.
  [tseaver]

- Plone 4 compatibility:  Removed long-deprecated 'five:traversable'
  ZCML directive.
  [tseaver]

1.2a1 (2011-04-30)
------------------

- Fixed adding and renaming of CompositePack Viewlets and Layouts
  in the composite_tool. [hathawsh]

- Fixed code that triggered deprecation warnings. [tseaver]

- Rearranged imports in packcomposite.py. [tseaver]

- Eggified. [hathawsh]

- Made compatible with Plone 3 and CompositePage from svn.zope.org.
  Plone 3+ is now required.
  [hathawsh]

- At the end of _initObjects update the kupu library, so composables
  are registered correctly there.
  [jladage,maurits]

- Added the topic view to the profile, since that was already expected
  in the tests. All tests are passing again.
  [jladage]

- Bugfix roundtrip import/export didn't work correctly because of
  the use of different filenames. The export creates a composite_tool.xml
  and the import expected compositetool.xml. Thanks to Tres Seaver for
  reporting this bug and providing a patch. A deprecation warning will be
  logged in case compositetool.xml is still used in existing profiles
  [jladage]

- Fix bug in reinstall which removed the composables from kupu.
  [ree]

- Added compopack_template_azax layer to the skins which gets added in the
  correct order, in case azax is installed.
  [jslob]

- Removed the ++resource++ code from the layout templates which were
  generating at least 4 404's per request.
  [jladage]

- Added ResourceRegistry config for all js and css. Moved the skins files